# INQASM

./: .gitignore  CMakeLists.txt  README.md  main_antlr.cpp
Node0/: process_1.nqasm  process_12.yaml
Node1/: file_2A.nqasm  process_1.nqasm
cuqui/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
cuqui/examples/: execute_example.sh
cuqui/examples/dist_cnot/: remote_cnot.inq  remote_cnot_1.nqasm
cuqui/examples/remote_cnot/: remote_cnot_1.netqasm  remote_cnot_2.netqasm
cuqui/inquir/: CMakeLists.txt  InQuIRCompiler.cpp  InQuIRLexer.g4  InQuIRParser.g4  InQuIRtoNetQASMListener.cpp  InQuIRtoNetQASMListener.hpp  Makefile  cmake_install.cmake  generate.sh  main_antlr.cpp  swap_test_telegate-only_2x8-cube.inq  tree.ps
cuqui/inquir/.antlr/: InQuIRLexer.java  InQuIRParser.interp  InQuIRParser.java
cuqui/netqasm/: NetQASMCompiler.hpp  NetQASMLexer.g4  NetQASMParser.g4  generate.sh  test.txt
cuqui/netqasm/.antlr/: NetQASMLexer.interp  NetQASMLexer.java  NetQASMLexer.tokens  NetQASMParser.interp  NetQASMParser.java  NetQASMParser.tokens
examples/: README.md
examples/compilation/dist_cnot/: cnot.inq
examples/compilation/dist_cnot/Node0/: file_0.nqasm  file_1A.nqasm
examples/compilation/dist_cnot/Node1/: file_1B.nqasm
examples/compilation/dist_swap_cnot/: swap_cnot.inq
examples/compilation/dist_swap_cnot/Node0/: file_info1.yaml
examples/compilation/dist_swap_cnot/Node1/: file_0.nqasm  file_info1.yaml
examples/compilation/dist_swap_cnot/Node2/: file_0.nqasm  file_1A.nqasm  file_1B.nqasm  file_info1.yaml
examples/cuqui/dist_cnot/: remote_cnot.inq
examples/cuqui/dist_cnot/Node0/: file_1A.nqasm  file_1B.nqasm
examples/cuqui/swap_test/: swap_test_telegate-only_2x8-cube.inq
examples/cuqui/swap_test/Node0/: file_0.nqasm  file_1A.nqasm  file_1B.nqasm  file_2A.nqasm  file_info1.yaml
examples/cuqui/swap_test/Node1/: file_2.nqasm  file_3A.nqasm  file_3B.nqasm  file_4A.nqasm  file_info3.yaml
examples/dist_cnot/: app_controller.py  app_target.py  debug.txt
examples/dist_cnot_translated/: app_controller.py  app_target.py  debug.txt
examples/dist_cnot_translated/benchmark/Node0/: file_1A.nqasm
examples/dist_cnot_translated/benchmark/Node1/: file_2B.nqasm
examples/dist_cnot_translated/custom/: InQuIRtoNetQASMListener.cpp
examples/dist_cnot_translated/custom/Node1/: file_1.nqasm  file_info2.yaml
examples/netqasm/dist_cnot/cuqui_dist_cnot/: debug.txt  debut.txt
examples/netqasm/dist_cnot/cuqui_dist_cnot/benchmark/Node0/: file_0.nqasm
examples/netqasm/dist_cnot/cuqui_dist_cnot/benchmark/Node1/: file_1.nqasm  file_2A.nqasm
examples/netqasm/dist_cnot/cuqui_dist_cnot/custom/Node0/: file_0.nqasm
examples/netqasm/dist_cnot/netqasm_dist_cnot/: README.md  app_target.py
examples/simulation/dist_cnot/inqasm_files/: app_target.py
examples/simulation/dist_cnot/inqasm_files/custom/Node1/: file_2A.nqasm  file_2B.nqasm
inqasm/: CMakeLists.txt  main.cpp
inqasm/inquir/: InQuIRCompiler.cpp  InQuIRCompiler.hpp  InQuIRLexer.g4  InQuIRParser.g4  InQuIRtoNetQASMListener.cpp  generate.sh
inquir/: generate.sh  inquir.g4
netqasm/: NetQASMCompiler.cpp  NetQASMLexer.g4  NetQASMParser.g4
